[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.package]
name = "rfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FailedCaptchx/rfs"
authors = ["Daniel Weiland <daniel@weilxnd.com>"]
categories = ["filesystem", "network-programming"]

[workspace.dependencies]
bytes = "1.7.1"
quinn = "0.11.3"
rustls-pemfile = "2.1.3"
tokio = { version = "1.39.3", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "macros",
] }
tokio-rustls = "0.26.0"
