[package]
name = "rfs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["filesystem"]

[dependencies]
bytes.workspace = true
quinn.workspace = true
rustls-pemfile.workspace = true
text_io = "0.1.12"
tokio.workspace = true
tokio-rustls.workspace = true
