[package]
name = "rfs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
nom = { version = "7.1.3", features = ["docsrs"] }
bytes.workspace = true
quinn.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
